# trustable-score

./: README.md  manage.py  pyproject.toml
.github/workflows/: tests.yml
config/: testing.py
tests/trustable/: test_views.py
trustable_score/: apps.py  urls.py  views.py
