[project]
name = "trustable-score"
version = "0.0.0"
description = "Django Application to generate metrics for Project Health"
authors = [
    {name = "Bitergia Developers"}
]
license = {text = "GPL-3.0+"}
readme = "README.md"
requires-python = "^3.11"
keywords = [
    "development",
    "grimoirelab"
]
classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[project.urls]
repository = "https://github.com/Bitergia/trustable-score"

[tool.poetry]
packages = [
    { include = "trustable_score" },
]

[tool.poetry.dependencies]
django = "^4.2"
mysqlclient = "^2.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-django = "^4.11.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.testing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
